cmake_minimum_required(VERSION 3.5)

project(Pizza)

add_executable(Pizza main.cpp Pizza.h Pizza.cpp IOutput.h Order.h Order.cpp Ingredient.h Ingredient.cpp 
PineapplePizza.h Meat.h Meat.cpp MeatPizza.h Salt.h Salt.cpp Remover.cpp Remover.h Appender.h Appender.cpp 
Chease.h Chease.cpp Menu.h Menu.cpp CheasePizza.h CheasePizza.cpp)