cmake_minimum_required(VERSION 3.5)

project(Pizza)

add_executable(Pizza main.cpp Pizza.h Pizza.cpp IOutput.h Order.h Order.cpp Ingredient.h Ingredient.cpp 
PineapplePizza.h PineapplePizza.cpp Meat.h MeatPizza.h MeatPizza.cpp Salt.h Remover.cpp Remover.h Appender.h Appender.cpp 
Chease.h Menu.h Menu.cpp CheasePizza.h CheasePizza.cpp CheaseMozzarella.h Pineapple.h Mozzarella.h Mozzarella.cpp)